<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_dodaj"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.muszkie.datacollector.Add">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/LabelImie"
            android:hint="@string/name"
            android:id="@+id/editTextImie"
            android:background="@color/grey" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextWiek"
            android:hint="@string/age"
            android:background="@color/grey"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/editTextImie"
            android:layout_toEndOf="@+id/editTextImie"
            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp" />

        <Button
            android:text="@string/removePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/datePicker"
            android:layout_toRightOf="@+id/photoButton"
            android:layout_toEndOf="@+id/photoButton"
            android:onClick="removePic"
            android:id="@+id/removePhotoButton" />

        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:id="@+id/saveButton"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/editTextWiek" />

        <Button
            android:text="@string/takePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="dispatchTakePictureIntent"
            android:id="@+id/photoButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <view
            android:id="@+id/datePicker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            class="com.example.muszkie.datacollector.CustomDatePicker"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"></view>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/alert_dark_frame"
            android:id="@+id/imageView"
            android:scaleType="fitCenter"
            android:scaleX="3"
            android:scaleY="3"
            android:layout_above="@+id/removePhotoButton"
            android:layout_alignEnd="@+id/datePicker"
            android:layout_marginBottom="25dp" />

    </RelativeLayout>
</ScrollView>


